--- a/Phone/main/res/layout/push_manage_toggle_item_spinner.xml
+++ b/Phone/main/res/layout/push_manage_toggle_item_spinner.xml
@@ -35,7 +35,7 @@
         android:id="@+id/push_enable_text"
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
-    	android:layout_toRightOf="@+id/text_enable_text"
+    	android:layout_toRightOf="@+id/text_toggle_view"
     	android:layout_below="@+id/text_toggle_view"
     	android:text="@string/push_alerts"
     	style="@style/push_toggle_box_text_style"
