--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -357,4 +357,12 @@
         <item name="android:padding">0dp</item>
     </style>
 
+     <style name="selected_status_indicator_text">
+        <item name="android:textColor">@color/body_copy</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:lines">1</item>
+        <item name="android:padding">0dp</item>
+    </style>
 </resources>
