--- a/Phone/main/res/layout/action_bar_menu_layout.xml
+++ b/Phone/main/res/layout/action_bar_menu_layout.xml
@@ -39,18 +39,15 @@
 	    android:layout_marginBottom="3dp"
 	    android:visibility="gone"/>
 	    
-	
 	<Button
 	    android:id="@+id/logout_button"
 	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
+	    android:layout_height="fill_parent"
 	    android:layout_alignTop="@+id/navigation_button"
+	    android:layout_alignBottom="@+id/navigation_button"
 	    android:layout_toLeftOf="@+id/dummy_view"
 	    android:text="@string/log_out" 
-	    style="@style/white_button"
-	    android:layout_marginBottom="5dp"
-	    android:layout_marginTop="3dp"
-	    android:layout_marginRight="@dimen/between_related_elements_padding"
+	    style="@style/logout_actionbar_button"
 	    android:visibility="gone"/>
 	
 	<!-- This view allows for the spacing between the logout button and the right side of the screen -->
