DE1298 : Fixed issue where the remember user id check box on the login screen would cause the application to crash when pressed.

--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -131,7 +131,7 @@
 			     	android:layout_marginTop="14dp"
 			     	android:layout_below="@+id/password_field"
 			        android:padding="5dip"
-			        android:onClick="toggleCheckBox"
+			        android:onClick="toggleCheckBoxFromXml"
 			        android:background="@drawable/gray_gradient_square"
 			        android:src="@drawable/transparent_square"
 			    	android:layout_marginLeft="5dip"/>
