--- a/Phone/main/res/layout/push_manage_toggle_item_edit_text.xml
+++ b/Phone/main/res/layout/push_manage_toggle_item_edit_text.xml
@@ -54,7 +54,9 @@
 	    android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_alignLeft="@+id/header"
-    	android:layout_below="@+id/header"/>
+    	android:layout_below="@+id/header"
+    	android:maxWidth="@dimen/push_edit_box_max_width"
+    	android:maxLength="9"/>
 	
 	<TextView
 	    android:id="@+id/amount_text_box_view"
