--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -16,8 +16,9 @@
    	<dimen name="first_toggle_text_margin_left">9dp</dimen>
     <dimen name="second_toggle_text_margin_left">17dp</dimen>
     <dimen name="push_header_margin_left">20dp</dimen>
-    <dimen name="push_spinner_width">75dp</dimen>
-    <dimen name="dummy_push_box_width">100dp</dimen>
+    <dimen name="push_spinner_width">100dp</dimen>
+    <dimen name="push_edit_box_max_width">125dp</dimen>
+    <dimen name="dummy_push_box_width">125dp</dimen>
     <dimen name="dummy_push_box_height">50dp</dimen>
     <dimen name="push_master_toggle_height">30dp</dimen>
    	<dimen name="push_master_toggle_width">75dp</dimen>
