--- a/Phone/main/res/layout/push_simple_spinner_dropdown.xml
+++ b/Phone/main/res/layout/push_simple_spinner_dropdown.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:padding="@dimen/forms_inner_padding">
 	
 	<TextView
 		android:id="@+id/amount"
