DE1272: Making the error text smaller

--- a/Phone/main/res/layout/push_manage_toggle_item_edit_text.xml
+++ b/Phone/main/res/layout/push_manage_toggle_item_edit_text.xml
@@ -80,7 +80,7 @@
 	
 	<TextView
 	    android:id="@+id/push_edit_text_error_label"
-	    style="@style/error_label"
+	    style="@style/push_error_label"
 	    android:layout_below="@+id/minimum_amount"
 	    android:text="@string/doesnt_match_records" />
 	
