ID: US4797 - Toggle Between Bank and Card US4674 - Save User ID US4800 Dynamic Footer
Tested Cases:
Regression Tested For Card
US4674 - Save User ID -UserID is remembered if switched on and User successfully logs in
US4674 - Save User ID - If unsuccessful log in then username/password fields clear and “Remember User ID” returns to default
US4674 - Save User ID -Attempt to Login card with wrong password and Remember ID Not check
US4674 - Save User ID -Attempt to Login card with wrong password and Remember ID Checked
US4674 - Save User ID -The second UserID logged in with remember me 'ON' option is remembered instead of the earlier user id with which the Userid was remembered
US4674 - Save User ID -The UserID is NOT retained in UserID field when the Remember Bank UserID switch is set to "OFF”
US4674 - Save User ID -Turning the device on/off/on the value is NOT retained in UserID field when the Remember option is not enabled
US4797 Toggle Between Bank and card and verify credentials and remember user id changes based on account.
US4800 Dynamic Footer - Select Card and ensure footer is updated for card and forgot link is shown
US4800 Dynamic Footer - Select Bank and ensure footer is updated for Bank and forgot link is not shown
US4800 Dynamic Footer - Select Card exit app and re-enter app ensure Card is selected, Dynamic Footer, and Forget LInk is not shown
US4800 Dynamic Footer - Select Bank exit app and re-enter app ensure Bank is selected, Dynamic Footer, and Forget Link is shown

--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -262,7 +262,7 @@
 
 		<Button
 		    android:id="@+id/customer_service_button"
-		    android:layout_width="wrap_content"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight=".33"
 		    style="@style/login_bottom_bar_button"
@@ -270,15 +270,15 @@
 
 		<Button
 		    android:id="@+id/privacy_and_security_button"
-		    android:layout_width="wrap_content"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight=".33"
 		    style="@style/login_bottom_bar_button"
 		    android:text="@string/privacy_and_security" />
 
 		<Button
-		    android:id="@+id/register_now_button"
-		    android:layout_width="wrap_content"
+		    android:id="@+id/register_now_or_atm_button"
+		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight=".33"
 		    style="@style/login_bottom_bar_button"
