US3751, US3706, US3682, US3695 - Handled the changing of the screens to show the correct data based on what part of the registration / forgot process the user came from.

--- a/Phone/main/res/layout/modal_alert_layout.xml
+++ b/Phone/main/res/layout/modal_alert_layout.xml
@@ -9,13 +9,14 @@
   	     style="@style/alert_modal_white_bg"
   	     android:layout_width="match_parent"
   	     android:layout_height="wrap_content"
-  	     android:layout_gravity="fill" >
+  	     android:layout_gravity="center">
 
   	     <LinearLayout
   	         android:id="@+id/modal_linear_layout"
   	         android:layout_width="match_parent"
-  	         android:layout_height="match_parent"
-  	         android:orientation="vertical" />
+  	         android:layout_height="fill_parent"
+  	         android:orientation="vertical" 
+  	         android:paddingBottom="@dimen/modal_orange_margin_bottom"/>
   	 </ScrollView>
 
 </RelativeLayout>
