--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -34,6 +34,7 @@
     <dimen name="call_to_actions_padding">15dp</dimen>
     <dimen name="orange_button_left_right_padding">30dp</dimen>
     <dimen name="orange_button_margin_top">40dp</dimen>
+    <dimen name="modal_orange_margin_bottom">15dp</dimen>
  	<dimen name="modal_orange_margin_top">17dp</dimen>
     <dimen name="white_button_left_right_padding">10dp</dimen>
     <dimen name="white_button_margin_top">15dp</dimen>
