--- a/Phone/main/res/layout/modal_default_top_view.xml
+++ b/Phone/main/res/layout/modal_default_top_view.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-   	android:layout_height="wrap_content"
-    android:orientation="vertical" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="@dimen/forms_inner_padding">
 
-    <ImageView
-        android:id="@+id/error_icon"
-        android:contentDescription="@string/discover_copyright_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/modal_alert_title"
-        android:src="@drawable/error_icon_red" 
-        android:visibility="gone"
-        style="@style/modal_error_image"/>
-    
-   	<TextView 
-        android:id="@+id/modal_alert_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/error_icon"
-        style="@style/modal_title_text"/>
-   	
-    <TextView
-        android:id="@+id/modal_alert_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/modal_alert_title"
-        style="@style/modal_content_text"/>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:padding="@dimen/forms_inner_padding"  >
+	   
+		<ImageView
+	        android:id="@+id/error_icon"
+	        android:contentDescription="@string/discover_copyright_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignTop="@+id/modal_alert_title"
+	        android:src="@drawable/error_icon_red" 
+	        android:visibility="gone"
+	        style="@style/modal_error_image"/>
+	    
+	   	<TextView 
+	        android:id="@+id/modal_alert_title"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_toRightOf="@+id/error_icon"
+	        style="@style/modal_title_text"/>
+	   	
+	    <TextView
+	        android:id="@+id/modal_alert_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/modal_alert_title"
+	        style="@style/modal_content_text"/>
    
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
