--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -155,16 +155,13 @@
     </style>
 
     <style name="modal_title_text" parent="title_copy">
-        <item name="android:layout_marginTop">@dimen/modal_top_padding</item>
-        <item name="android:layout_marginLeft">@dimen/modal_left_padding</item>
-        <item name="android:layout_marginRight">@dimen/modal_right_padding</item>
-        <item name="android:layout_marginBottom">@dimen/modal_bottom_padding</item>
+        <item name="android:layout_marginTop">@dimen/modal_text_padding</item>
+        <item name="android:layout_marginLeft">@dimen/forms_inner_padding</item>
+        <item name="android:layout_marginBottom">@dimen/modal_text_padding</item>
         <item name="android:textSize">@dimen/title_min</item>
     </style>
 
     <style name="modal_content_text" parent="sub_copy">
-        <item name="android:layout_marginLeft">@dimen/modal_left_padding</item>
-        <item name="android:layout_marginRight">@dimen/modal_right_padding</item>
         <item name="android:textSize">@dimen/small_copy_max</item>
     </style>
 
@@ -219,7 +216,6 @@
 
     <style name="modal_error_image">
         <item name="android:layout_marginTop">@dimen/between_related_elements_padding</item>
-        <item name="android:layout_marginLeft">@dimen/modal_left_padding</item>
     </style>
 
     <style name="push_toggle_box_default">
