--- a/Phone/main/res/drawable/white_button.xml
+++ b/Phone/main/res/drawable/white_button.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:shape="rectangle">
-    
-    <gradient 
-		android:startColor="#d6d6d4"
-		android:centerColor="@color/white"
-    	android:endColor="@color/white"
-    	android:angle="90"/>
-    
-    <stroke
-        android:color="@color/stroke_ruling_line"
-        android:width="1dp"></stroke>
-    
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-</shape>
+    <item android:drawable="@drawable/secondary_button" android:state_focused="true"/>
+    <item android:drawable="@drawable/secondary_button_ds" android:state_pressed="true"/>
+    <item android:drawable="@drawable/secondary_button_ds" android:state_selected="true"/>
+    <item android:drawable="@drawable/secondary_button"/>
+
+</selector>
