--- a/Phone/main/res/values/strings_help.xml
+++ b/Phone/main/res/values/strings_help.xml
@@ -10,6 +10,19 @@
         TDD
     </string>
     
+    <string name="open_an_account">
+        Open an Account
+    </string>
+    <string name="bank_general_mail_title">
+        General
+    </string>
+    
+    <string name="bank_outside_usa">
+        Outside U.S.
+    </string>
+    <string name="bank_new_accounts_mail_title">
+        New\nAccounts/\nDeposits
+    </string>
     <string name="payment_address">
         Payment\nAddress
     </string>
@@ -25,6 +38,9 @@
 	<string name="comments">
 	    Comments
 	</string>
+	<string name="bank_tech_support">
+	    Technical Support
+	</string>
 	
 	<string name="card_phone_us">
 	    1-800-347-2683
@@ -36,10 +52,29 @@
 	    1-800-347-7449
 	</string>
 	
+	<string name="bank_phone_open_account">
+	    1-800-000-0000
+	</string>
+	<string name="bank_phone_tech_support">
+	    1-800-000-0000
+	</string>
+	<string name="bank_phone_tdd">
+	    1-800-347-7449
+	</string>
+	<string name="bank_outside_usa">
+	    1-800-347-7499
+	</string>
+	
 	<string name="card_mailing_payment">
 	    Discover Financial Services\nP.O. Box 6103\nCarol Stream, IL\n60197-6103
 	</string>
 	<string name="card_mailing_customer_service">
 	    Discover Financial Services\nP.O. Box 30943\nSalt Lake City, UT\n84130-0943
+	</string>
+	<string name="bank_general_mail">
+	    Discover Bank\nP.O. Box 30416\nSalt Lake City, UT\n84130
+	</string>
+	<string name="bank_new_accounts_mail">
+	    Discover Bank\nP.O. Box 30417\nSalt Lake City, UT\n84130-0943
 	</string>
 </resources>
