--- a/Phone/main/res/layout/action_bar_menu_layout.xml
+++ b/Phone/main/res/layout/action_bar_menu_layout.xml
@@ -25,9 +25,7 @@
 	    android:id="@+id/title_view"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_alignParentTop="true"
-	    android:layout_toLeftOf="@+id/logout_button"
-	    android:layout_toRightOf="@+id/navigation_button"
+	    android:layout_centerInParent="true"
 	    style="@style/action_bar_text"/> 
 	    
 	<ImageView
