--- a/Phone/main/res/layout/customer_service.xml
+++ b/Phone/main/res/layout/customer_service.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/card_phone_title_label"
-            style="@style/body_copy"
+            style="@style/need_help_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/phone_title_label"
@@ -35,7 +35,7 @@
 
         <TextView
             android:id="@+id/bank_phone_title_label"
-            style="@style/body_copy"
+            style="@style/need_help_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/card_phone_numbers_list"
@@ -61,7 +61,7 @@
 
         <TextView
             android:id="@+id/card_mail_title_label"
-            style="@style/body_copy"
+            style="@style/need_help_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mail_title_label"
@@ -78,7 +78,7 @@
 
         <TextView
             android:id="@+id/bank_mail_title_label"
-            style="@style/body_copy"
+            style="@style/need_help_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/card_mail_address_list"
@@ -93,23 +93,25 @@
             android:layout_below="@+id/bank_mail_title_label" >
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/comments_label"
-            style="@style/title_copy"
+        <Button
+            android:id="@+id/provide_feedback_button"
+            style="@style/call_to_action_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bank_mail_address_list"
-            android:layout_marginTop="@dimen/groups_of_elements_padding"
-            android:text="@string/comments" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:text="@string/feedback_text" />
 
-        <Button
-            android:id="@+id/provide_feedback_button"
-            style="@style/white_button"
+        <TextView
+            android:id="@+id/discover_copyright"
+            style="@style/sub_copy_small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/comments_label"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:text="@string/feedback_text" />
+            android:layout_below="@+id/provide_feedback_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:text="@string/discover_copyright_text" />
     </RelativeLayout>
 
 </ScrollView>
