--- a/Phone/main/res/values/strings_help.xml
+++ b/Phone/main/res/values/strings_help.xml
@@ -10,21 +10,25 @@
     <string name="bank_new_accounts_mail_title">New\nAccounts/\nDeposits</string>
     <string name="payment_address">Payment\nAddress</string>
     <string name="customer_service_two_line">Customer\nService</string>
+    <string name="bank_personal_loans">Personal Loans</string>
     <string name="by_phone">By Phone</string>
     <string name="by_mail">By Mail</string>
     <string name="comments">Comments</string>
     <string name="bank_tech_support">Technical Support</string>
-    <string name="card_phone_us">1-800-347-2683</string>
-    <string name="card_phone_non_us">1-801-902-3100</string>
-    <string name="card_phone_tdd">1-800-347-7449</string>
-    <string name="bank_phone_open_account">1-800-000-0000</string>
-    <string name="bank_phone_tech_support">1-800-000-0000</string>
-    <string name="bank_phone_tdd">1-800-347-7449</string>
-    <string name="bank_outside_usa">1-800-347-7499</string>
-    <string name="card_mailing_payment">Discover Financial Services\nP.O. Box 6103\nCarol Stream, IL\n60197-6103</string>
-    <string name="card_mailing_customer_service">Discover Financial Services\nP.O. Box 30943\nSalt Lake City, UT\n84130-0943</string>
+    <string name="card_phone_us">1&#8211;800&#8211;347&#8211;2683</string>
+    <string name="card_phone_non_us">1&#8211;801&#8211;902&#8211;3100</string>
+    <string name="card_phone_tdd">1&#8211;800&#8211;347&#8211;7449</string>
+    <string name="bank_phone_open_account">1&#8211;800&#8211;347&#8211;7000</string>
+    <string name="bank_phone_tech_support">1&#8211;800&#8211;290&#8211;9885</string>
+    <string name="bank_phone_tdd">1&#8211;800&#8211;347&#8211;7454</string>
+    <string name="bank_phone_outside_usa">1&#8211;302&#8211;323&#8211;7810</string>
+    <string name="bank_phone_personal_loans">1&#8211;800&#8211;000&#8211;0000</string>
+    <string name="card_mailing_payment">Discover Financial Services\nP.O. Box 6103\nCarol Stream, IL\n60197&#8211;6103</string>
+    <string name="card_mailing_customer_service">Discover Financial Services\nP.O. Box 30943\nSalt Lake City, UT\n84130&#8211;0943</string>
     <string name="bank_general_mail">Discover Bank\nP.O. Box 30416\nSalt Lake City, UT\n84130</string>
-    <string name="bank_new_accounts_mail">Discover Bank\nP.O. Box 30417\nSalt Lake City, UT\n84130-0943</string>
+    <string name="bank_new_accounts_mail">Discover Bank\nP.O. Box 30417\nSalt Lake City, UT\n84130&#8211;0943</string>
+    <string name="bank_personal_loans_mail">Discover Bank\nP.O. Box 30417\nSalt Lake City, UT\n84130&#8211;0943</string>
+    <string name="bank_personal_loans_mail_title">Personal\nLoans</string>
     <string name="contact_us">Contact Us</string>
 
 </resources>
