--- a/Phone/main/res/layout/modal_alert_layout.xml
+++ b/Phone/main/res/layout/modal_alert_layout.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/modal_orange_margin_bottom" />
+        android:paddingBottom="@dimen/modal_orange_margin_bottom"
+        android:weightSum="10">
+    </LinearLayout>
 
 </RelativeLayout>
