--- a/Phone/main/res/layout/register_confirm.xml
+++ b/Phone/main/res/layout/register_confirm.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="@dimen/forms_inner_padding" >
@@ -114,3 +117,4 @@
         android:textSize="@dimen/small_copy_mid" />
 
 </RelativeLayout>
+</ScrollView>
