--- a/Phone/main/res/layout/single_orange_button_bottom.xml
+++ b/Phone/main/res/layout/single_orange_button_bottom.xml
@@ -12,10 +12,13 @@
         android:background="@drawable/modal_divider_line"/>
     
      <Button
-         android:id="@+id/orange_button"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_centerHorizontal="true"
-         style="@style/call_to_action_theme"/>
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/call_to_action_theme"
+        android:layout_marginTop="@dimen/modal_orange_margin_top"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/modal_orange_margin_bottom"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
