--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -380,4 +380,18 @@
         <item name="android:lines">1</item>
         <item name="android:padding">0dp</item>
     </style>
+    
+    <!-- Confirmation Screen Styles -->
+    <style name="confirmation_info_header_text">
+        <item name="android:textColor">@color/field_copy</item>
+        <item name="android:textSize">@dimen/small_copy_min</item>
+        <item name="android:layout_marginTop">@dimen/table_inner_padding</item>
+    </style>
+
+    <style name="confirmation_info_value_text">
+        <item name="android:textColor">@color/body_copy</item>
+        <item name="android:textSize">@dimen/small_copy_max</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+  
 </resources>
